--- a/singboxp-config.json
+++ b/singboxp-config.json
@@ -150,7 +150,8 @@
       },
       {
         "domain_suffix":[
-          "hbcsgo.com"
+          "hbcsgo.com",
+          "bjmymf.com"
         ],
         "outbound": "🎯 全球直连"
       },
