--- a/singboxp-config.json
+++ b/singboxp-config.json
@@ -5,13 +5,6 @@
       "timestamp": true
   },
   "dns": {
-    "hosts": {
-      "miwifi.com": [ "192.168.2.1" ],
-      "doh.pub": [ "1.12.12.12", "120.53.53.53", "2402:4e00::" ],
-      "dns.alidns.com": [ "223.5.5.5", "223.6.6.6", "2400:3200::1", "2400:3200:baba::1" ],
-      "dns.google": [ "8.8.8.8", "8.8.4.4", "2001:4860:4860::8888", "2001:4860:4860::8844" ],
-      "cloudflare-dns.com": [ "1.1.1.1", "1.0.0.1", "2606:4700:4700::1111", "2606:4700:4700::1001" ]
-    },
     "servers": [
       { "tag": "dns_block", "address": "rcode://success" },
       { "tag": "dns_direct", "address": [ "https://doh.pub/dns-query", "https://dns.alidns.com/dns-query" ], "detour": "DIRECT" },
@@ -37,7 +30,7 @@
       "enabled": true,
       "inet4_range": "198.18.0.0/15",
       "inet6_range": "fc00::/18",
-      "exclude_rule": { "rule_set": [ "fakeip-filter", "private" ] }
+      "exclude_rule": { "rule_set": [ "fakeip-filter" ] }
     }
   },
   "inbounds": [
